--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
 	id 'war'
-	id "org.sonarqube" version "2.8"
+	id "org.sonarqube" version "3.0"
 }
+
 
 group = 'ch.noseryoung'
 version = '0.0.1-SNAPSHOT'
@@ -62,4 +63,9 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+sonarqube {
+	properties {
+		property "sonar.projectKey", "nikolaischunk_TryOutTesting"
+	}
 }
