--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,26 @@
 
+language: node_js
+
+node_js:
+  - 10
+
+stages:
+  - continousDelivery
+
+before_install:
+  - chmod +x gradlew
+  - sudo apt-get update
+
+install:
+  - sudo apt install curl
+  - npm install -g newman
+
+addons:
+  sonarcloud:
+    organization: $SONAR_USER
+    token: $SONAR_TOKEN
+
+jobs:
+  include:
+    - stage: continousIntegration
+      script: ./gradlew sonarqube
