--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ hibernate.temp.use_jdbc_metadata_defaults=false
 # Personal Data, please adjust these values to fit your own credentials
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=postgres
-spring.datasource.password=E266f52c!
+spring.datasource.password=1234
+server.port=${PORT}
